arc: Fix crash on close a notification

Speculative fix of the notification close crash that the underlying
notification surface is changed after the floating close button
is created.

BUG=646634

Review-Url: https://codereview.chromium.org/2338423002
Cr-Commit-Position: refs/heads/master@{#418881}

Former-commit-id: 6232937b395e494747b457b3f046c3bb86c65c9c